--- a/etc/skel/.config/waybar/config.jsonc
+++ b/etc/skel/.config/waybar/config.jsonc
@@ -55,27 +55,27 @@
         "tooltip": true
     },
 
-    "custom/theme": {
-        "format": "{}",
-        "rotate": 0,
-        "exec": "echo ; echo 󰟡 switch theme",
-        "on-click": "themeswitch.sh -n",
-        "on-click-right": "themeswitch.sh -p",
-        "on-click-middle": "sleep 0.1 && themeselect.sh",
-        "interval" : 86400, // once every day
-        "tooltip": true
-    },
+    //"custom/theme": {
+    //    "format": "{}",
+    //    "rotate": 0,
+    //    "exec": "echo ; echo 󰟡 switch theme",
+    //    "on-click": "themeswitch.sh -n",
+    //    "on-click-right": "themeswitch.sh -p",
+    //    "on-click-middle": "sleep 0.1 && themeselect.sh",
+    //    "interval" : 86400, // once every day
+    //    "tooltip": true
+    //},
 
-    "custom/wallchange": {
-        "format": "{}",
-        "rotate": 0,
-        "exec": "echo ; echo 󰆊 switch wallpaper",
-        "on-click": "swwwallpaper.sh -n",
-        "on-click-right": "swwwallpaper.sh -p",
-        "on-click-middle": "sleep 0.1 && swwwallselect.sh",
-        "interval" : 86400, // once every day
-        "tooltip": true
-    },
+    //"custom/wallchange": {
+    //    "format": "{}",
+    //    "rotate": 0,
+    //    "exec": "echo ; echo 󰆊 switch wallpaper",
+    //    "on-click": "swwwallpaper.sh -n",
+    //    "on-click-right": "swwwallpaper.sh -p",
+    //    "on-click-middle": "sleep 0.1 && swwwallselect.sh",
+    //    "interval" : 86400, // once every day
+    //    "tooltip": true
+    //},
 
 	"wlr/taskbar": {
 		"format": "{icon}",
