Change wallpaper format

--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -1,4 +1,5 @@
 # Maintainer: Tales A. Mendonça <talesam@gmail.com>
+# Maintainer: Leonardo Berbert  <leo4berbert@gmail.com>
 
 pkgname=comm-hyprland-config
 pkgdesc="Hyprland Configuration Package"
