Changed font, icon and theme gtk

--- a/etc/skel/.config/hypr/themes/common.conf
+++ b/etc/skel/.config/hypr/themes/common.conf
@@ -2,19 +2,23 @@
 # █▀▀ █░█ █▀█ █▀ █▀█ █▀█
 # █▄▄ █▄█ █▀▄ ▄█ █▄█ █▀▄
 
-exec = hyprctl setcursor Bibata-Modern-Ice 20
-exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
-exec = gsettings set org.gnome.desktop.interface cursor-size 20
+exec = hyprctl setcursor Bibata-Modern-Classic 24
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Classic'
+exec = gsettings set org.gnome.desktop.interface cursor-size 24
 
 
 # █▀▀ █▀█ █▄░█ ▀█▀
 # █▀░ █▄█ █░▀█ ░█░
 
-exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
-exec = gsettings set org.gnome.desktop.interface document-font-name 'Cantarell 10'
-exec = gsettings set org.gnome.desktop.interface monospace-font-name 'CaskaydiaCove Nerd Font Mono 9'
+exec = gsettings set org.gnome.desktop.interface font-name 'Noto Sans Nerd Font Medium 11'
+exec = gsettings set org.gnome.desktop.interface document-font-name 'Noto Sans Nerd Font Medium 11'
+exec = gsettings set org.gnome.desktop.interface monospace-font-name 'Noto Sans Mono Medium 12'
 exec = gsettings set org.gnome.desktop.interface font-antialiasing 'rgba'
 exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
+
+# Tema GTK e ícones
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Big-Blue'
+exec = gsettings set org.gnome.desktop.interface icon-theme 'bigicons-papient-dark'
 
 
 # █▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░░
